cambie el nombre de la página, puse las letras en mayúscula

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "vivian yorojo moreno"
+  title: "VIVIAN YOROJO MORENO"
   navbar:
     right:
       - href: index.qmd
